--- a/pset1.tex
+++ b/pset1.tex
@@ -96,7 +96,7 @@ we obtain
 &=&  
 \int_{0}^{1} (\sum_{i=0}^{N} a_i t^i )(\sum_{i=0}^{N} \overline{b_i}t^i) dt \\
 &=& \int_{0}^{1} \sum_{0 \leq i,j \leq N} a_i \overline{b_j} t^{i+j} dt \\
-&=& \Big[ \sum_{0 \leq i,j \leq N} \dfrac{a_i \overline{b_j}}{i+j+1} t^{i+j+1} \Big]_{0}^{1} \\ 
+&=& \bigg[ \sum_{0 \leq i,j \leq N} \dfrac{a_i \overline{b_j}}{i+j+1} t^{i+j+1} \bigg]_{0}^{1} \\ 
 &=& \sum_{0 \leq i,j \leq N} \dfrac{a_i \overline{b_j}}{i+j+1}. \\
 \eQe
 
