--- a/pset1.tex
+++ b/pset1.tex
@@ -255,10 +255,15 @@ the set formed by those two eigenvalues.
 \smallskip
 
 \textbf{(b)} 
+Using the same computational step as in the problem 2, we have that the eigenvectors are
+$(-1 -\sqrt{10},3)$ and $(-1+\sqrt{10},3)$. As these are linearly independent, one can 
+simply normalize them with their respective norms.  
 
 \smallskip
 
-\textbf{(c)}
+\textbf{(c)} We now have orthonormal bases from $(b)$. The unitary operator $U$ can be formed 
+by joining the orthonormal bases column by column. 
+\hfill $\qed$
 
  
 \end{solution}
