--- a/pset1.tex
+++ b/pset1.tex
@@ -102,11 +102,11 @@ we obtain
 
 \bigskip
 
-\textbf{(2)} By writing down the matrix representation of the differentiation 
-operator, using
-the standard polynomial basis, $\{ 1, x, x^2, ..., x^n\}$, we see that the matrix does not
-equal its conjugate transpose, and also does not equal the negative of the conjugate transpose.
-Hence, it is not self-adjoint, and not skew-joint. 
+\textbf{(2)}
+It is not self-adjoint and skew-joint. This can trivally shown by taking $p(x) = x$ and
+$q(x) = 1$ and computing the inner product of the adjoint operator and the original operator
+are not equal, nor the negative of each other. 
+
 \hfill $\qed$  
 
 \end{solution}
