--- a/pset4.tex
+++ b/pset4.tex
@@ -187,7 +187,8 @@ One can see that $(-1,1,1)$ has a $0$ inner product with $f_3$ and $(1,2,1)$ als
 product and they are linearly independent. Therefore, they form an orthonormal basis for $M$.
 
 \textbf{(e)}
-We have that 
+As we have shown that $R$ is an isometry in part b, and we know isometries are orthogonally diagnolizable,
+$R$ is orthogonally diagonalizable. 
 
 \hfill $\qed$
 
